[JVMCI] assert(wf.check_method_context(ctxk, m)) failed: proper context

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b133

      While looking up an interface method in a class using Dependencies::find_unique_concrete_method, Dependencies::check_method_context can fail if the method is declared in two interfaces that both define the method. There's an existing check that assumes that the proper context should be the first interface method that implements it, but that logic fails if it's defined in two places. This is only an assertion failure for that method. find_unique_concrete_method still returns null as there is nothing find.

            Assignee:
            Tom Rodriguez
            Reporter:
            Tom Rodriguez
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: