8162477: [JVMCI] assert(wf.check_method_context(ctxk, m)) failed: proper context Reviewed-by: kvn